--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,17 +1,11 @@
-# XML ve TXT dosyaları için doğru content-type
-<Files "sitemap.xml">
-    ForceType application/xml
-    Header set Content-Type "application/xml; charset=utf-8"
-</Files>
-
-<Files "robots.txt">
-    ForceType text/plain
-    Header set Content-Type "text/plain; charset=utf-8"
-</Files>
-
-# AddType ile de deneyelim
+# MIME Types - XML ve TXT dosyaları için
 AddType application/xml .xml
 AddType text/plain .txt
+
+# XML dosyaları için özel ayar
+<FilesMatch "\.xml$">
+    ForceType application/xml
+</FilesMatch>
 
 RewriteEngine On
 RewriteBase /
